# vessel

./: .gitignore  Dockerfile  Dockerfile.test  LICENSE.TXT  Makefile  README.md  build_containers.sh  pyproject.toml  ruff.toml  setup_venv.sh
.github/workflows/: ci.yaml  deploy-image.yaml
test/: fixture.py
test/util/: test_checksum.py  test_diffoscope.py  test_oci.py  test_skopeo.py  test_unified_diff.py  test_uri.py
vessel/: __init__.py  __main__.py  cli.py
vessel/config/: diff_config.yaml
vessel/diff/: __init__.py  diff_command.py
vessel/utils/: __init__.py  checksum.py  diffoscope.py  flag.py  oci.py  skopeo.py  unified_diff.py  uri.py
