[tool.poetry]
name = "vessel"
version = "0.1.0"
description = "Tool for reproducible container builds"
authors = ["Kevin A. Pitstick <kapitstick@sei.cmu.edu>"]
readme = "README.md"
packages = [
  { include = "vessel" }
]

[tool.poetry.dependencies]
python = "^3.11"
diffoscope = "^259"
click = "^8.1.7"
platformdirs = "^4.2.0"
ruff = "^0.3.1"
portion = "^2.4.2"
PyYAML = "^6.0.1"

[tool.poetry.group.extra_dependencies.dependencies]
androguard = "4.1.2"
argcomplete = "3.5.1"
defusedxml = "0.7.1"
distro = "1.9.0"
jsondiff = "2.2.1"
progressbar = "2.5"
pypdf = "5.0.1"
r2pipe = "1.9.4"
python-debian = "0.1.49"
rpm = "0.2.0"
python-tlsh = "4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vessel = "vessel.cli:vessel"
