[tool.poetry]
name = "vessel"
version = "0.1.0"
description = "Tool for reproducible container builds"
authors = ["Kevin A. Pitstick <kapitstick@sei.cmu.edu>"]
readme = "README.md"
packages = [
  { include = "vessel" }
]

[tool.poetry.group.extra_dependencies]
optional = true

[tool.poetry.group.qa]
optional = true

[tool.poetry.dependencies]
python = "^3.11"
diffoscope = "^259"
click = "^8.1.7"
platformdirs = "^4.2.0"
portion = "^2.6.0"
PyYAML = "^6.0.1"

[tool.poetry.group.extra_dependencies.dependencies]
androguard = "4.1.2"
argcomplete = "3.5.1"
defusedxml = "0.7.1"
distro = "1.9.0"
jsondiff = "2.2.1"
progressbar = "2.5"
pypdf = "5.0.1"
r2pipe = "1.9.4"
python-debian = "0.1.49"
rpm = "0.2.0"
python-tlsh = "4.5.0"

[tool.poetry.group.qa.dependencies]
ruff = "^0.7.4"
mypy = "^1.13.0"
types-PyYAML = "^6.0.12"
actionlint-py = "^1.7.4.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vessel = "vessel.cli:vessel"
